syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.smartcart";
option java_outer_classname = "SmartCartServiceImpl";



package smartcart;

// The Smart Cart service definition.
service SmartCart {
  
    // simple RPC. Add an item into cart
    rpc AddToCart (CartUpdateRequest) returns (CartStatus); 
    // simple RPC. Remove an item from cart
    rpc RemoveFromCart (CartUpdateRequest) returns (CartStatus); 
    // server-side streaming RPC.
    // Allows the client to continuously receive updates about the current contents of the cart.
    rpc GetCartContents (CartRequest) returns (stream CartContents); 
  }

  // The request message containing the item ID.
  message CartUpdateRequest {
    string item_id = 1; // ID of the item 
    string cart_id = 2; // ID of the cart
  } 
  
  // The response message containing the Status message and Success flag.
  message CartStatus {
    string message = 1; // Status message
    bool success = 2; // Success flag
  }
  
  // The request message containing the cart ID.
  message CartRequest { 
    string cart_id = 1; // ID of the cart
  } 

  // The response message containing the list of items and total price in the cart.
  message CartContents {
    repeated CartItem items = 1; // List of items in the cart
    string cart_id = 2; // ID of the cart
    float total = 3; // Total price of all items in the cart
  }


  // The response message containing the item ID, name, quantity in the cart and price.
  message CartItem {
    string item_id = 1; // ID of the item
    string name = 2; // Name of the item
    int32 quantity = 3; // Quantity of the item in the cart
    float price = 4; // Price of the item
  }
  